# home-network-monitoring

./: .gitignore  README.md
db/: home_network_monitoring_model.mwb
frontend/dashboard/: pyproject.toml
linux/: .env.example  scanner.py
